# fhi-vibes

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  README_FHI_FireWorksConnections.md  build.py  environment.yml  fireworks.cfg.template  fork_test  fork_test3  hilde.cfg.template  hilderc.template  meson.build  mkdocs.yml  notes_to_ourselves.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
devel/supercells/: lattice_points.ipynb
doc/: .gitignore  README_FHI_FireWorksConnections.md
doc/concept/: ASE_Task_and_Workflow_description.tex
doc/interpolation/: .gitignore  interpolation.tex  periodic.tex  references.bib
doc/source/: conf.py  hilde.aims.rst  hilde.cli.rst  hilde.fireworks.rst  hilde.fireworks.tasks.fw_out.rst  hilde.fireworks.tasks.rst  hilde.fireworks.workflows.rst  hilde.harmonic_analysis.rst  hilde.helpers.rst  hilde.helpers.sobol.rst  hilde.helpers.supercell.rst  hilde.k_grid.rst  hilde.konstanten.rst  hilde.materials_fp.rst  hilde.molecular_dynamics.rst  hilde.phono3py.rst  hilde.phonon_db.rst  hilde.phonopy.rst  hilde.relaxation.rst  hilde.rst  hilde.scripts.rst  hilde.spglib.rst  hilde.structure.rst  hilde.tasks.rst  hilde.tdep.rst  hilde.templates.lammps.rst  hilde.templates.rst  hilde.templates.settings.rst  index.rst  modules.rst
doc_backup/: .gitignore  Dockerfile
doc_backup/concept/: ASE_Task_and_Workflow_description.tex  acs-ASE_Task_and_Workflow_description.bib
docker/: Dockerfile
docs/: Credits.md  Installation.md  References.md
docs/Documentation/: 0_intro.md  calculator_setup.md  cli.md  input_files.md  input_files_slurm.md  md.md  output_files.md  phono3py.md  phonopy.md  relaxation.md  units.md
docs/High_Throughput/: 0_tut.md  setup.md
docs/Tutorial/: 0_intro.md  0_singlepoint.md  1_geometry_optimization.md  2_phonopy.md  2_phonopy_intro.md  2_phonopy_sc.md  3_md_ab_initio.md  3_md_canonical_sampling.md  3_md_intro.md  3_md_postprocess.md  3_md_rapid_prototyping.md  3_md_thermalization.md  4_statistical_sampling.md  5_anharmonicity_quantification.md  6_lattice_expansion.md  7_green_kubo.md  7_green_kubo_intro.md  acknowledgments.md  references.md  singlepoint.md
examples/: Al.in  README.md  aims.in  md.in  phono3py.in  phonopy.in  relaxation.in
examples/.devel/: aln.in
examples/MaterialFingerPrints/: materialFingerprints.py  material_fingerprints.py  material_fingerprints_FK.py
examples/balsam/: workflow.in
examples/cli/: aims.in  info.md  phonopy.in
examples/devel/: ase_stress.ipynb
examples/fireworks/: README  default_aims_settings.py  fireworks_example.py  fireworks_example_qlaunch.py  fireworks_queue.py  fireworks_workflow_gen_example.py  si.in  workflow.in
examples/green_kubo/: heat_flux.nc  simple_kappa.ipynb
examples/harmonic_analysis/: Untitled.ipynb  geometry.in  geometry.in.prepared  geometry.in.supercell.300K  harmonic_md.py  mode_projection.ipynb  trajectory.son
examples/high_throughput/: workflow.in
examples/hiphive/: hiphive_al.py  hiphive_si_lammps.py
examples/hiphive_ex/: hiphive_si_lammps.py  si.in
examples/json_trajectory/: md_metadata.json  md_metadata.yaml  trajectory.ipynb  trajectory.json  trajectory.yaml  trajectory_yaml.ipynb
examples/k_grid/: .gitignore  hilde.cfg  kpoint_density.ipynb  kpointoptimizer.py  test_kopt.py
examples/k_grid_convergence/: kpointoptimizer.py
examples/material_fingerprints/: material_fingerprints.py  material_fingerprints_FK.py  material_fingerprints_verbose.py
examples/md/: Al.in.supercell  backup.00000.tgz  backup.00001.tgz  md.cfg  md.ipynb  md_restart.ipynb  md_with_socketio.py  md_with_watchdog.ipynb  run_md.py  settings.in  trajectory.yaml
examples/phono3py/: phono3py.ipynb  phonopy_trajectory.yaml  run_phono3py.py  settings.in
examples/phonon_db/: aims_calculation.py  phonon.db  phonon_db.py  phonon_db_update.py  si.in  trajectory_phonopy.yaml
examples/phonons/: hilde.cfg  phonons.py  phonons_fireworks.py  phonons_lammps.py  phonons_socketio.py  phonopy.cfg  phonopy.ipynb  relax.py
examples/phonons_socketio/: phonons_socketio.py.ipynb
examples/phonopy/: info.md  run_phonopy.py  settings.in
examples/relaxation/: fireworks.cfg  hilde.cfg  info.md  relax.cfg  relax.py  relax_fireworks.py  settings.in
examples/simple_ase_calculation/: simple_aims_calculation.py  simple_ase_calculation.py  simple_lammps_calculation.py
examples/sobol/: sobol_hilde.ipynb
examples/structure/: ase_spacegroup.ipynb  pAtoms.ipynb
examples/supercells/: conventions.ipynb
examples/sym_block_add/: gen_zr_o2.py
examples/trajectory/: md_metadata.yaml  pretty_json.ipynb  read_trajectory.ipynb  test.json.yaml  trajectory.json  trajectory.yaml  trajectory_json.ipynb  trajectory_yaml.ipynb
hilde/: __init__.py  _defaults.py  anharmonicity_score.py  fourier.py  hilde.conf  io.py  settings.py  son.py  trajectory.py
hilde/MatRefDatabase/: MaterialsFingerprints.py  databaseRegisterFunctions.py
hilde/WIP/: relaxation_mona.py
hilde/aims/: __init__.py  _defaults.py  context.py  setup.py  workflow.py
hilde/ase/: geometry.py
hilde/balsam/: apps.py  cli.py  data_encoder.py
hilde/calculators/: aims_calc.py
hilde/cli/: __init__.py  aigk.py  cli_tracker.py  info.py  input.py  misc.py  output.py  run.py  submit.py  template.py  tools.py  utils.py
hilde/fireworks/: _defaults.py  (+6 more)
paper/: paper.bib  paper.md
playground/: hilde.conf
tests/: Makefile  clean.py  fireworks_test.py  run_md.py  test_correlate.py  test_fourier.py  test_integrate.py  test_io.py  test_json.py  test_material_fingerprints.py  test_netcdf_h5py.py  test_sobol.py  test_stresses.py
vibes/: __init__.py  _defaults.py  anharmonicity_score.py  brillouin.py  brillouinzone.py  calculate.py  context.py  correlation.py  defaults.py  dimensions.py  dynamical_matrix.py  filenames.py  force_constants.py  fourier.py  hiphive.py  integrate.py  io.py  keys.py  settings.py  son.py  spglib.py  td.py
(+866 files in other folders)
