[tool.poetry]
name = "hilde"
version = "0.2.1.dev3"
description = "Haber Institute Lattice Dynamics Environment"
authors = ["Florian Knoop <knoop@fhi-berlin.mpg.de>"]
license = "ISC"
readme = "README.md"
repository = "https://gitlab.com/flokno/hilde"

keywords = ['physics']

build = "build.py"

[tool.poetry.dependencies]
python = "^3.6, <4.0"
numpy = "^1.16"
scipy = "~1.2.1"
matplotlib = "^3.1"
son = "^0.2.5"
spglib = "^1.12"
phonopy = "^2.1"
ase = {git = "https://gitlab.com/ase/ase.git"}
click = "^7.0"
attrs = "^19.1"
pandas = "^0.24.2"
seekpath = "^1.8.4"
fireworks = {version = "^1.9",optional = true}
phono3py = {version = "^1.17",optional = true}
python-gssapi = {version = "^0.6.4",optional = true}
pymongo = {version = "^3.8",optional = true}
fabric = {version = "^2.4",optional = true}
paramiko = {version = "^2.4",optional = true}
psycopg2 = {version="^2.8.0", optional=true}
click_completion = "^0.5.1"
seaborn = {version = "^0.9.0",optional = true}
jupyter = {version = "^1.0",optional = true}

balsam-flow = {version = "^0.3.5", optional = true}
setuptools = {version = "^39.2", optional = true}

[tool.poetry.extras]
fireworks = ["fireworks", "python-gssapi", "pymongo", "fabric", "paramiko"]
phono3py = ["phono3py"]
postgresql = ["psycopg2"]
tutorial = ["seaborn", "jupyter"]
balsam = ["balsam-flow", "setuptools"]

[tool.poetry.dev-dependencies]
black = "^18.9b0"
pytest = "^4.6"
flake8 = "^3.7"

[tool.poetry.scripts]
hilde = 'hilde.cli:cli'

[build-system]
requires = ["poetry>=0.12", "numpy"]
build-backend = "poetry.masonry.api"
