[tool.poetry]
name = "vibes"
version = "1.0.0a1"
description = "Fritz Haber Institute Vibrational Simulations"
authors = ["Florian Knoop <knoop@fhi-berlin.mpg.de>", "Thomas Purcell <purcell@fhi-berlin.mpg.de"]
license = "ISC"
readme = "README.md"
repository = "https://gitlab.com/flokno/hilde"

keywords = ['physics']

build = "build.py"

[tool.poetry.dependencies]
python = "^3.6, <4.0"
numpy = "^1.11"
scipy = "^1.1.1"
matplotlib = "^3.1"
son = "^0.3.2"
spglib = "^1.12"
phonopy = "^2.1"
ase = {git = "https://gitlab.com/ase/ase.git", branch="master"}
click = "^7.0"
attrs = "^19.1"
pandas = "^0.25.0"
seekpath = "^1.8.4"
fireworks = {version = "^1.9",optional = true}
phono3py = {version = "^1.17",optional = true}
python-gssapi = {version = "^0.6.4",optional = true}
pymongo = {version = "^3.8",optional = true}
fabric = {version = "^2.4",optional = true}
paramiko = {version = "^2.4",optional = true}
psycopg2 = {version="^2.8.0", optional=true}
click_completion = {git = "https://github.com/flokno/click-completion.git", branch="fish_complete_files"}
xarray = "^0.12"
netCDF4 = "^1.5"
jinja2 = "^2.10"
hiphive = {version = "^0.5.0", optional = true}
tables = "^3.5"
click_aliases = "^1.0"

[tool.poetry.extras]
fireworks = ["fireworks", "python-gssapi", "pymongo", "fabric", "paramiko"]
phono3py = ["phono3py"]
hiphive = ["hiphive"]
postgresql = ["psycopg2"]

[tool.poetry.dev-dependencies]
black = "^18.9b0"
pytest = "^4.6"
flake8 = "^3.7"
rope = "^0.14.0"
flake8-bugbear = "^19.8"
flake8-comprehensions = "^3.1"

[tool.poetry.scripts]
vibes = 'vibes.cli:cli'

[tool.black]
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12", "numpy"]
build-backend = "poetry.masonry.api"

